@@ -1,5 +1,5 @@
 [Desktop Entry]
-Version=0.5
+Version=0.5.1
 Terminal=false
 Path=/usr/share/quelea
 Categories=AudioVideo;
